# Work_with_excel

./: .flake8  README.MD  pyproject.toml
data/: advance report template 2024.xlsx  advance_template.xlsx  template_excel.xlsx
data/newdata/: filled_template.xlsx  new_advance report template 2024.xlsx  new_template_excel.xlsx
src/: example.py  fill_template.py  output.xlsx  serializers.py  work_with_excel.py
tests/: test_example.py  test_work_with_excel.py
