[tool.poetry]
name = "work-with-excel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"
pandas = "^2.2.3"
pytest = "^8.3.3"
coverage = "^7.6.4"
black = "^24.10.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
